--- a/lp1vsl4/index.html
+++ b/lp1vsl4/index.html
@@ -1,7 +1,8 @@
 ---
-layout: lptemplate1
+layout: lptemplate4
 title: memoryneurozoomavsla
-headingLine: 'TOP NEUROSCIENTISTS: <b>Restore Your Cognitive Power with this 10-Second Ritual (Watch Video)</b>'
+topBanner: 'Revealed: The secret memory robber you must know'
+headingLine: 'TOP NEUROSCIENTISTS: <b>Restore Your Cognitive Power with this 10-Second Ritual</b>'
 vendorHopLink: 'https://hop.clickbank.net/?affiliate=pakpak&vendor=neurozoom&pid=paradoxical&tid=[cmc_vid]'
 
 cmcProject: Memory1
