--- a/lp1vsl1/index.html
+++ b/lp1vsl1/index.html
@@ -1,6 +1,6 @@
 ---
 layout: lptemplate2
-title: memoryneurozoomavsla
+title: memoryneurozooma
 headingLine: 'TOP NEUROSCIENTIST: <b>Restore Your Cognitive Power with this 10-Second Ritual (Watch Video)</b>'
 vendorHopLink: 'https://hop.clickbank.net/?affiliate=pakpak&vendor=neurozoom&pid=quiz&tid=[cmc_vid]'
 
