--- a/lp1vsl3/index.html
+++ b/lp1vsl3/index.html
@@ -1,6 +1,6 @@
 ---
 layout: lptemplate1
-title: memoryneurozoomavsla
+title: memoryneurozoomb
 headingLine: 'TOP NEUROSCIENTISTS: <b>Restore Your Cognitive Power with this 10-Second Ritual (Watch Video)</b>'
 vendorHopLink: 'https://hop.clickbank.net/?affiliate=pakpak&vendor=neurozoom&pid=paradoxical&tid=[cmc_vid]'
 
