--- a/lpa-vc/index.html
+++ b/lpa-vc/index.html
@@ -1,8 +1,9 @@
 ---
-layout: lptemplate1
-title: memoryneurozoomb
-headingLine: 'TOP NEUROSCIENTISTS: <b>Restore Your Cognitive Power with this 10-Second Ritual (Watch Video)</b>'
+layout: lptemplate2
+title: memoryneurozooma
+headingLine: 'TOP NEUROSCIENTIST: <b>Restore Your Cognitive Power with this 10-Second Ritual (Watch Video)</b>'
 vendorHopLink: 'https://hop.clickbank.net/?affiliate=pakpak&vendor=neurozoom&pid=paradoxical&tid=[cmc_vid]'
+enableVideo: false
 
 cmcProject: Memory1
 cmcHid: 928018351
@@ -22,3 +23,4 @@ Fortunately, this memory robbing substance has now been exposed in a shocking ne
 But you need to hurry. Because the pharmaceutical companies that produce nauseating Alzheimers' drugs will do anything to take the video down as soon as they catch wind of it.
 
 Click the <b>'Watch Now'</b> button below to <b>watch this short, mind-blowing video now</b> before it gets taken down.
+
