--- a/lpa-vd/index.html
+++ b/lpa-vd/index.html
@@ -2,8 +2,8 @@
 layout: lptemplate2
 title: memoryneurozooma
 headingLine: 'TOP NEUROSCIENTIST: <b>Restore Your Cognitive Power with this 10-Second Ritual (Watch Video)</b>'
-vendorHopLink: 'https://hop.clickbank.net/?affiliate=pakpak&vendor=neurozoom&pid=paradoxical&tid=[cmc_vid]'
-enableVideo: true
+vendorHopLink: 'https://hop.clickbank.net/?affiliate=pakpak&vendor=neurozoom&pid=emoti-v4&tid=[cmc_vid]'
+enableVideo: false
 
 cmcProject: Memory1
 cmcHid: 928018351
