--- a/lpa-vd/index.html
+++ b/lpa-vd/index.html
@@ -1,7 +1,7 @@
 ---
 layout: lptemplate2
 title: memoryneurozooma
-headingLine: 'TOP NEUROSCIENTIST: <b>Restore Your Cognitive Power with this 10-Second Ritual (Watch Video)</b>'
+headingLine: 'TOP NEUROSCIENTIST: <b>Restore Your Cognitive Power with this 10-Second Ritual</b>'
 vendorHopLink: 'https://hop.clickbank.net/?affiliate=pakpak&vendor=neurozoom&pid=emoti-v4&tid=[cmc_vid]'
 enableVideo: false
 
