updated lpbvd with bottom button

--- a/lpb-vd/index.html
+++ b/lpb-vd/index.html
@@ -1,9 +1,10 @@
 ---
 layout: lptemplate3
 title: memoryneurozooma
-headingLine: 'TOP NEUROSCIENTIST: <b>Restore Your Cognitive Power with this 10-Second Ritual</b>'
+headingLine: 'Restore Your Cognitive Power with this 10-Second Ritual'
 vendorHopLink: 'https://hop.clickbank.net/?affiliate=pakpak&vendor=neurozoom&pid=emoti-v4&tid=[cmc_vid]'
 enableVideo: false
+bottomButton: true
 
 cmcProject: Memory1
 cmcHid: 928018351
