added vid for lander

--- a/lpb-vd/index.html
+++ b/lpb-vd/index.html
@@ -3,7 +3,7 @@ layout: lptemplate3
 title: memoryneurozooma
 headingLine: 'Restore Your Cognitive Power with this 10-Second Ritual'
 vendorHopLink: 'https://hop.clickbank.net/?affiliate=pakpak&vendor=neurozoom&pid=emoti-v4&tid=[cmc_vid]'
-enableVideo: false
+enableVideo: true
 bottomButton: true
 
 cmcProject: Memory1
