tweaked ply btn postion lpbvd

--- a/lpb-vd/index.html
+++ b/lpb-vd/index.html
@@ -5,6 +5,7 @@ headingLine: 'Restore Your Cognitive Power with this 10-Second Ritual'
 vendorHopLink: 'https://hop.clickbank.net/?affiliate=pakpak&vendor=neurozoom&pid=emoti-v4&tid=[cmc_vid]'
 enableVideo: true
 bottomButton: true
+playBtnMargin: '15px 15px'
 
 cmcProject: Memory1
 cmcHid: 928018351
