--- a/lpa-va/index.html
+++ b/lpa-va/index.html
@@ -1,8 +1,11 @@
 ---
-layout: lptemplate2
+layout: lptemplate3
 title: memoryneurozooma
-headingLine: 'TOP NEUROSCIENTIST: <b>Restore Your Cognitive Power with this 10-Second Ritual (Watch Video)</b>'
+headingLine: 'Restore Your Cognitive Power with this 10-Second Ritual'
 vendorHopLink: 'https://hop.clickbank.net/?affiliate=pakpak&vendor=neurozoom&pid=quiz&tid=[cmc_vid]'
+enableVideo: true
+bottomButton: true
+playBtnMargin: '15px 15px'
 
 cmcProject: Memory1
 cmcHid: 928018351
