--- a/lp-va-t3/index.html
+++ b/lp-va-t3/index.html
@@ -1,7 +1,7 @@
 ---
 layout: lptemplate3
 title: memoryneurozooma
-headingLine: 'TOP NEUROSCIENTIST: <b>Restore Your Cognitive Power with this 10-Second Ritual (Watch Video)</b>'
+headingLine: 'Restore Your Cognitive Power with this 10-Second Ritual'
 vendorHopLink: 'https://hop.clickbank.net/?affiliate=pakpak&vendor=neurozoom&pid=quiz&tid=[cmc_vid]'
 
 cmcProject: Memory1
