--- a/lp-va-t3/index.html
+++ b/lp-va-t3/index.html
@@ -3,6 +3,7 @@ layout: lptemplate3
 title: memoryneurozooma
 headingLine: 'Restore Your Cognitive Power with this 10-Second Ritual'
 vendorHopLink: 'https://hop.clickbank.net/?affiliate=pakpak&vendor=neurozoom&pid=quiz&tid=[cmc_vid]'
+bottomButton: true
 
 cmcProject: Memory1
 cmcHid: 928018351
