lpca-vahaba tweaked text

--- a/lpca-vahaba/index.html
+++ b/lpca-vahaba/index.html
@@ -15,7 +15,7 @@ privacyLink: 'https://vitalityglow.life/tnc/privacy'
 termsLink: 'https://vitalityglow.life/tnc/terms'
 
 ---
-Top Neuroscientists have discovered this substance hidden in your bathroom drawer or everyday items as the true culprit of memory loss.
+Top Neuroscientists have discovered this substance hidden in your bathroom drawer and everyday items as the true culprit of memory loss.
 
 They are referred to as the <b>'memory robber'</b>. One that speeds up Alzheimer's by 200%…
 
