--- a/lpca-vahaba/index.html
+++ b/lpca-vahaba/index.html
@@ -15,16 +15,16 @@ privacyLink: 'https://vitalityglow.life/tnc/privacy'
 termsLink: 'https://vitalityglow.life/tnc/terms'
 
 ---
-Top Neuroscientists have discovered this <b>'memory robbing substance'</b> hidden in your bathroom drawer and everyday items as the true culprit of memory loss.
+Top Neuroscientists have confirmed the <b>'memory robber'</b> hidden in your bathroom drawer and everyday items is the true culprit of memory loss.
 
 One that speeds up Alzheimer's by 200%…
 
 Causing your neurons to die twice as fast and your memory to eventually completely shut down.
 
-Fortunately, this memory robber is now exposed in a shocking new video.
+Fortunately, this memory robbing substance is now exposed in a shocking new video.
 
-Thousands of people have reclaimed their crystal-clear mental recall and perfect body control. These include Nobel laureates, finance CEOs, tech moguls, and Hollywood celebrities.
+Thousands of people have reclaimed their crystal-clear mental recall and perfect body control discreetly. These include Nobel laureates, finance CEOs, tech moguls, and Hollywood celebrities.
 
-Your future is in your hands.
+Now, it’s your turn to achieve the same result.
 Click the <b>'Watch Now'</b> button below to learn how you can take back control of your mind and your life, starting today.
 
