lpca-vahaba tweak

--- a/lpca-vahaba/index.html
+++ b/lpca-vahaba/index.html
@@ -15,7 +15,7 @@ privacyLink: 'https://vitalityglow.life/tnc/privacy'
 termsLink: 'https://vitalityglow.life/tnc/terms'
 
 ---
-Top Neuroscientists have confirmed the <b>'memory robber'</b> hidden in your bathroom drawer and everyday items is the true culprit of memory loss.
+Top Neuroscientists have confirmed that the <b>'memory robber'</b> hidden in your bathroom drawer and everyday items is the true culprit of memory loss.
 
 One that speeds up Alzheimer's by 200%…
 
