--- a/lpca-vahaba/index.html
+++ b/lpca-vahaba/index.html
@@ -15,16 +15,15 @@ privacyLink: 'https://vitalityglow.life/tnc/privacy'
 termsLink: 'https://vitalityglow.life/tnc/terms'
 
 ---
-Top Neuroscientists have confirmed that the <b>'memory robber'</b>, hidden in your bathroom drawer and everyday items, is the true culprit of memory loss.
-
-One that speeds up Alzheimer's by 200%…
+Top Neuroscientists have discovered a <b>'memory robbing'</b> substance in your bathroom drawer and everyday items that speeds up Alzheimer's by 200%...
 
 Causing your neurons to die twice as fast and your memory to eventually completely shut down.
 
-Fortunately, this memory robbing substance is now exposed in a shocking new video.
+Fortunately, this memory robber is now exposed in a shocking new video.
 
 Thousands of people have reclaimed their crystal-clear mental recall and perfect body control discreetly. These include Nobel laureates, finance CEOs, tech moguls, and Hollywood celebrities.
 
 Now, it’s your turn to achieve the same result.
-Click the <b>'Watch Now'</b> button below to learn how you can take back control of your mind and your life, starting today.
+Click the <b>'Watch Now'</b> button below,
+and learn how you can take back control of your mind and your life, starting today.
 
